lazy load image

--- a/index.html
+++ b/index.html
@@ -36,67 +36,67 @@
             <h2>My Work</h2>
 			<div class="masonry-wrapper"><div class="masonry">
                 <div class="masonry-item">
-                    <img src="./images/aplikasi/covid.png" alt="Web Informasi Covid-19 Memanfaatkan REST APIe" class="masonry-content">
+                    <img data-src="./images/aplikasi/covid.png" alt="Web Informasi Covid-19 Memanfaatkan REST APIe" class="masonry-content">
                     <span class="img-content-hover" >
                         Web Informasi Covid-19 Memanfaatkan REST API
                     </span>
                 </div>
                 <div class="masonry-item">
-                  <img src="./images/aplikasi/tertular.png" alt="Dummy Image" class="masonry-content">
+                  <img data-src="./images/aplikasi/tertular.png" alt="Dummy Image" class="masonry-content">
                     <span class="img-content-hover" >
                         Sistem Informasi Pendataan Lokasi Sebaran Pasian Covid-19 Dengan Laravel
                     </span>
                 </div>
                 <div class="masonry-item">
-                    <img src="./images/aplikasi/goblog.png" alt="Simple Blog System Dengan Laravel" class="masonry-content">
+                    <img data-src="./images/aplikasi/goblog.png" alt="Simple Blog System Dengan Laravel" class="masonry-content">
                     <span class="img-content-hover" >
                         Simple Blog System Dengan Laravel
                     </span>
                 </div>
 
                 <div class="masonry-item">
-                    <img src="./images/aplikasi/kasir.png" alt="Aplikasi Kasir Dengan Laravel" class="masonry-content">
+                    <img data-src="./images/aplikasi/kasir.png" alt="Aplikasi Kasir Dengan Laravel" class="masonry-content">
                     <span class="img-content-hover" >
                         Aplikasi Kasir Dengan Laravel
                     </span>
                 </div>
 
                 <div class="masonry-item">
-                    <img src="./images/aplikasi/akuntasi.png" alt="Aplikasi Akuntasi Dengan Laravel" class="masonry-content">
+                    <img data-src="./images/aplikasi/akuntasi.png" alt="Aplikasi Akuntasi Dengan Laravel" class="masonry-content">
                     <span class="img-content-hover" >
                         Aplikasi Akuntasi Dengan Laravel
                     </span>
                 </div>
 
                 <div class="masonry-item">
-                    <img src="./images/aplikasi/inventaris.png" alt="Aplikasi Inventory Dengan Laravel" class="masonry-content">
+                    <img data-src="./images/aplikasi/inventaris.png" alt="Aplikasi Inventory Dengan Laravel" class="masonry-content">
                     <span class="img-content-hover" >
                         Aplikasi Inventory Dengan Laravel
                     </span>
                 </div>
 
                 <div class="masonry-item">
-                    <img src="./images/game/horro-game.png" alt="Horror Game Dengan Unity3D" class="masonry-content">
+                    <img data-src="./images/game/horro-game.png" alt="Horror Game Dengan Unity3D" class="masonry-content">
                     <span class="img-content-hover" >
                         Horror Game Dengan Unity3D
                     </span>
                 </div>
                 <div class="masonry-item">
-                    <img src="./images/game/ar.png" alt="AR Content Dengan Unity3D" class="masonry-content">
+                    <img data-src="./images/game/ar.png" alt="AR Content Dengan Unity3D" class="masonry-content">
                     <span class="img-content-hover" >
                         AR Content Dengan Unity3D
                     </span>
                 </div>
 
                 <div class="masonry-item">
-                    <img src="./images/aplikasi/kuesioner.png" alt="Aplikasi Kuesioner Android Dengan Kotlin" class="masonry-content">
+                    <img data-src="./images/aplikasi/kuesioner.png" alt="Aplikasi Kuesioner Android Dengan Kotlin" class="masonry-content">
                     <span class="img-content-hover" >
                         Aplikasi Kuesioner Android Dengan Kotlin
                     </span>
                 </div>
 
                 <div class="masonry-item">
-                    <img src="./images/game/box.png" alt="" class="masonry-content">
+                    <img data-src="./images/game/box.png" alt="" class="masonry-content">
                     <span class="img-content-hover" >
                         Dungeon Crawler Game Dengan Unity3D
                     </span>
@@ -112,7 +112,8 @@
 		</section>
 	</div>
 	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="./js/jquery.lazy.min.js"></script>
 	<script src="./js/script.js"></script>
 </body>
 
