--- a/index.html
+++ b/index.html
@@ -21,94 +21,99 @@
 	</header>
 	<div class="wrapper">
 		<section id="about">
-			<h2>Tentangku</h2>
+			<h2>Biodata</h2>
 			<p>
-                Laki-laki bernama Bagus Indrayana
+                Nama : Bagus Indrayana
             </p>
             <p>
-                Lahir di Grobogan,15 Mei 2001
+                Tempat tanggal lahir Grobogan,15 Mei 2001
             </p>
             <p>
-                Besar di Jawa Tengah sampai umur 8 Tahun bersama orang tua pindah ke Samarinda,Kalimantan Timur dan menetap disana hingga sekarang
+                Pendidikan terakhir SMK, dan sekarang sedang menempuh pendidikan S1
             </p>
 		</section>
 		<section id="project">
             <h2>My Work</h2>
-			<div class="masonry-wrapper"><div class="masonry">
-                <div class="masonry-item">
-                    <img data-src="./images/aplikasi/covid-min.png" alt="Web Informasi Covid-19 Memanfaatkan REST APIe" class="masonry-content">
-                    <span class="img-content-hover" >
-                        Web Informasi Covid-19 Memanfaatkan REST API
-                    </span>
-                </div>
-                <div class="masonry-item">
-                  <img data-src="./images/aplikasi/tertular-min.png" alt="Dummy Image" class="masonry-content">
-                    <span class="img-content-hover" >
-                        Sistem Informasi Pendataan Lokasi Sebaran Pasian Covid-19 Dengan Laravel
-                    </span>
-                </div>
-                <div class="masonry-item">
-                    <img data-src="./images/aplikasi/goblog-min.png" alt="Simple Blog System Dengan Laravel" class="masonry-content">
-                    <span class="img-content-hover" >
-                        Simple Blog System Dengan Laravel
-                    </span>
-                </div>
+			<div class="masonry-wrapper">
+                <div class="masonry">
+                    <div class="masonry-item">
+                        <img data-src="./images/aplikasi/covid-min.png" alt="Web Informasi Covid-19 Memanfaatkan REST APIe" class="masonry-content">
+                        <span class="img-content-hover" >
+                            Web Informasi Covid-19 Memanfaatkan REST API
+                        </span>
+                    </div>
+                    <div class="masonry-item">
+                    <img data-src="./images/aplikasi/tertular-min.png" alt="Dummy Image" class="masonry-content">
+                        <span class="img-content-hover" >
+                            Sistem Informasi Pendataan Lokasi Sebaran Pasian Covid-19 Dengan Laravel
+                        </span>
+                    </div>
+                    <div class="masonry-item">
+                        <img data-src="./images/aplikasi/goblog-min.png" alt="Simple Blog System Dengan Laravel" class="masonry-content">
+                        <span class="img-content-hover" >
+                            Simple Blog System Dengan Laravel
+                        </span>
+                    </div>
 
-                <div class="masonry-item">
-                    <img data-src="./images/aplikasi/kasir-min.png" alt="Aplikasi Kasir Dengan Laravel" class="masonry-content">
-                    <span class="img-content-hover" >
-                        Aplikasi Kasir Dengan Laravel
-                    </span>
-                </div>
+                    <div class="masonry-item">
+                        <img data-src="./images/aplikasi/kasir-min.png" alt="Aplikasi Kasir Dengan Laravel" class="masonry-content">
+                        <span class="img-content-hover" >
+                            Aplikasi Kasir Dengan Laravel
+                        </span>
+                    </div>
 
-                <div class="masonry-item">
-                    <img data-src="./images/aplikasi/akuntasi-min.png" alt="Aplikasi Akuntasi Dengan Laravel" class="masonry-content">
-                    <span class="img-content-hover" >
-                        Aplikasi Akuntasi Dengan Laravel
-                    </span>
-                </div>
+                    <div class="masonry-item">
+                        <img data-src="./images/aplikasi/akuntasi-min.png" alt="Aplikasi Akuntasi Dengan Laravel" class="masonry-content">
+                        <span class="img-content-hover" >
+                            Aplikasi Akuntasi Dengan Laravel
+                        </span>
+                    </div>
 
-                <div class="masonry-item">
-                    <img data-src="./images/aplikasi/inventaris-min.png" alt="Aplikasi Inventory Dengan Laravel" class="masonry-content">
-                    <span class="img-content-hover" >
-                        Aplikasi Inventory Dengan Laravel
-                    </span>
-                </div>
+                    <div class="masonry-item">
+                        <img data-src="./images/aplikasi/inventaris-min.png" alt="Aplikasi Inventory Dengan Laravel" class="masonry-content">
+                        <span class="img-content-hover" >
+                            Aplikasi Inventory Dengan Laravel
+                        </span>
+                    </div>
 
-                <div class="masonry-item">
-                    <img data-src="./images/game/horro-game-min.png" alt="Horror Game Dengan Unity3D" class="masonry-content">
-                    <span class="img-content-hover" >
-                        Horror Game Dengan Unity3D
-                    </span>
-                </div>
-                <div class="masonry-item">
-                    <img data-src="./images/game/ar-min.png" alt="AR Content Dengan Unity3D" class="masonry-content">
-                    <span class="img-content-hover" >
-                        AR Content Dengan Unity3D
-                    </span>
-                </div>
+                    <div class="masonry-item">
+                        <img data-src="./images/game/horro-game-min.png" alt="Horror Game Dengan Unity3D" class="masonry-content">
+                        <span class="img-content-hover" >
+                            Horror Game Dengan Unity3D
+                        </span>
+                    </div>
+                    <div class="masonry-item">
+                        <img data-src="./images/game/ar-min.png" alt="AR Content Dengan Unity3D" class="masonry-content">
+                        <span class="img-content-hover" >
+                            AR Content Dengan Unity3D
+                        </span>
+                    </div>
 
-                <div class="masonry-item">
-                    <img data-src="./images/aplikasi/kuesioner-min.png" alt="Aplikasi Kuesioner Android Dengan Kotlin" class="masonry-content">
-                    <span class="img-content-hover" >
-                        Aplikasi Kuesioner Android Dengan Kotlin
-                    </span>
-                </div>
+                    <div class="masonry-item">
+                        <img data-src="./images/aplikasi/kuesioner-min.png" alt="Aplikasi Kuesioner Android Dengan Kotlin" class="masonry-content">
+                        <span class="img-content-hover" >
+                            Aplikasi Kuesioner Android Dengan Kotlin
+                        </span>
+                    </div>
 
-                <div class="masonry-item">
-                    <img data-src="./images/game/box-min.png" alt="" class="masonry-content">
-                    <span class="img-content-hover" >
-                        Dungeon Crawler Game Dengan Unity3D
-                    </span>
+                    <div class="masonry-item">
+                        <img data-src="./images/game/box-min.png" alt="" class="masonry-content">
+                        <span class="img-content-hover" >
+                            Dungeon Crawler Game Dengan Unity3D
+                        </span>
+                    </div>
                 </div>
-
-                
-                
-              </div>
+            </div>
 		</section>
 		<section id="contact">
 			<h2>Email</h2>
 			<p>bagusindrayana@outlook.com</p>
+            <p>bagusindrayanaindo@gmail.com</p>
+            <h2>Telp/WA/Telegram</h2>
+			<p>081545419859</p>
+            <h2>Portofolio lain</h2>
+			<p><a href="https://www.linkedin.com/in/bagus-indrayana-8985211b7/">Linkedin</a></p>
+            <p><a href="https://github.com/bagusindrayana">Github</a></p>
 		</section>
 	</div>
 	
