--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			<p>bagusindrayana@outlook.com</p>
             <p>bagusindrayanaindo@gmail.com</p>
             <br>
-            <h2>Telp/WA/Telegram</h2>
+            <h2>Whatsapp</h2>
 			<p>081545419859</p>
             <br>
             <h2>Portofolio lain</h2>
