--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 Nama : Bagus Indrayana
             </p>
             <p>
-                Tempat tanggal lahir Grobogan,15 Mei 2001
+                Tempat tanggal lahir : Grobogan,15 Mei 2001
             </p>
             <p>
-                Pendidikan terakhir SMK, dan sekarang sedang menempuh pendidikan S1
+                Pendidikan terakhir : SMK, dan sekarang sedang menempuh pendidikan S1
             </p>
 		</section>
 		<section id="project">
