--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 		</section>
         <section id="3d-section">
             <h2>3D Showcase</h2>
+            <div class="lds-ripple"><div></div><div></div></div>
             <div id="model-3d">
                 
             </div>
@@ -115,6 +116,7 @@
 
         <section id="animation-section">
             <h2>3D Animation Showcase</h2>
+            <div class="lds-ripple"><div></div><div></div></div>
             <div id="animation-3d">
                 
             </div>
