slash model base

--- a/isometric-design/index.html
+++ b/isometric-design/index.html
@@ -184,7 +184,7 @@
 
                 const loader = new GLTFLoader(manager);
 
-                loader.load( '/model/isometric_base.gltf', function ( gltf ) {
+                loader.load( 'model/isometric_base.gltf', function ( gltf ) {
                     var model = gltf.scene;
                     // model.traverse( function ( object ) {
 
