--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <p>
                 Pendidikan terakhir : SMK, dan sekarang sedang menempuh pendidikan S1
             </p>
+            <p>
+                Teknologi/Skill : HTML,CSS,JS,LARAVEL
+            </p>
 		</section>
 		<section id="project">
             <h2>My Work</h2>
