biodata box,ready script

--- a/index.html
+++ b/index.html
@@ -198,18 +198,20 @@
                 </div>
               </div>
               <div class="col-8">
-                <ul>
-                  <li>
-                    NAME : <span animasi-tulisan="BAGUS INDRAYANA">..........</span>
-                  </li>
-                  <li>
-                    BORN : <span animasi-tulisan="GROBOGAN, 15 MAY 2001">.........</span>
-                  </li>
-                  <li>
-                    ADDRESS : <span animasi-tulisan="SAMARINDA, EAST KALIMANTAN">.........</span>
-                  </li>
-
-                </ul>
+                <div class="box">
+                  <ul>
+                    <li>
+                      NAME : <span animasi-tulisan="BAGUS INDRAYANA">..........</span>
+                    </li>
+                    <li>
+                      BORN : <span animasi-tulisan="GROBOGAN, 15 MAY 2001">.........</span>
+                    </li>
+                    <li>
+                      ADDRESS : <span animasi-tulisan="SAMARINDA, EAST KALIMANTAN">.........</span>
+                    </li>
+  
+                  </ul>
+                </div>
                 <div class="box">
                   <h4>STATUS</h4>
                   <div class="stripes">
@@ -430,6 +432,7 @@
 
 
   <script src="./assets/js/scroll.js"></script>
+  <script src="./assets/js/ready.js"></script>
   <script src="./assets/js/scripts.js"></script>
 </body>
 
