add redme and using scrollpage.js

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
   </div>
   <div id="mouse-tooltip"></div>
-  <ul class="side-nav">
+  <ul class="side-nav" id="menu">
     <li data-page="#page1" tooltip="HOME" class="active"><a href="#"><span></span></a></li>
     <li data-page="#page2" tooltip="PROFILE"><a href="#"><span></span></a></li>
     <li data-page="#page3" tooltip="PROJECT"><a href="#"><span></span></a></li>
@@ -429,10 +429,7 @@
 
   </div>
 
-
-
-  <script src="./assets/js/scroll.js"></script>
-  <script src="./assets/js/ready.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/scrollpage-js/scrollpage.js"></script>
   <script src="./assets/js/scripts.js"></script>
 </body>
 
