--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/scrollpage-js/scrollpage.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/scrollpage-js/scrollpage.min.js"></script>
   <script src="./assets/js/scripts.js"></script>
 </body>
 
